# internal/handler/jobhdl/protobuf/job_response.pb.go
@@ -284,6 +284,53 @@ func (x *GetJobResponse) GetDuration() int64 {
 	return 0
 }
 
+type GetJobsResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Jobs []*GetJobResponse `protobuf:"bytes,1,rep,name=jobs,proto3" json:"jobs,omitempty"`
+}
+
+func (x *GetJobsResponse) Reset() {
+	*x = GetJobsResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetJobsResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetJobsResponse) ProtoMessage() {}
+
+func (x *GetJobsResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetJobsResponse.ProtoReflect.Descriptor instead.
+func (*GetJobsResponse) Descriptor() ([]byte, []int) {
+	return file_internal_handler_jobhdl_protos_job_response_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *GetJobsResponse) GetJobs() []*GetJobResponse {
+	if x != nil {
+		return x.Jobs
+	}
+	return nil
+}
+
 // Empty response
 type UpdateJobResponse struct {
 	state         protoimpl.MessageState
@@ -294,7 +341,7 @@ type UpdateJobResponse struct {
 func (x *UpdateJobResponse) Reset() {
 	*x = UpdateJobResponse{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[2]
+		mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[3]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -307,7 +354,7 @@ func (x *UpdateJobResponse) String() string {
 func (*UpdateJobResponse) ProtoMessage() {}
 
 func (x *UpdateJobResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[2]
+	mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[3]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -320,7 +367,7 @@ func (x *UpdateJobResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use UpdateJobResponse.ProtoReflect.Descriptor instead.
 func (*UpdateJobResponse) Descriptor() ([]byte, []int) {
-	return file_internal_handler_jobhdl_protos_job_response_proto_rawDescGZIP(), []int{2}
+	return file_internal_handler_jobhdl_protos_job_response_proto_rawDescGZIP(), []int{3}
 }
 
 // Empty response
@@ -333,7 +380,7 @@ type DeleteJobResponse struct {
 func (x *DeleteJobResponse) Reset() {
 	*x = DeleteJobResponse{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[3]
+		mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[4]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -346,7 +393,7 @@ func (x *DeleteJobResponse) String() string {
 func (*DeleteJobResponse) ProtoMessage() {}
 
 func (x *DeleteJobResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[3]
+	mi := &file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[4]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -359,7 +406,7 @@ func (x *DeleteJobResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use DeleteJobResponse.ProtoReflect.Descriptor instead.
 func (*DeleteJobResponse) Descriptor() ([]byte, []int) {
-	return file_internal_handler_jobhdl_protos_job_response_proto_rawDescGZIP(), []int{3}
+	return file_internal_handler_jobhdl_protos_job_response_proto_rawDescGZIP(), []int{4}
 }
 
 var File_internal_handler_jobhdl_protos_job_response_proto protoreflect.FileDescriptor
@@ -430,13 +477,17 @@ var file_internal_handler_jobhdl_protos_job_response_proto_rawDesc = []byte{
 	0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x0b, 0x63,
 	0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x1a, 0x0a, 0x08, 0x64, 0x75,
 	0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x18, 0x0e, 0x20, 0x01, 0x28, 0x03, 0x52, 0x08, 0x64, 0x75,
-	0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x22, 0x13, 0x0a, 0x11, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65,
-	0x4a, 0x6f, 0x62, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x13, 0x0a, 0x11, 0x44,
-	0x65, 0x6c, 0x65, 0x74, 0x65, 0x4a, 0x6f, 0x62, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
-	0x42, 0x2b, 0x5a, 0x29, 0x76, 0x61, 0x6c, 0x65, 0x74, 0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e,
-	0x61, 0x6c, 0x2f, 0x68, 0x61, 0x6e, 0x64, 0x6c, 0x65, 0x72, 0x2f, 0x6a, 0x6f, 0x62, 0x68, 0x64,
-	0x6c, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x3b, 0x70, 0x62, 0x62, 0x06, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x22, 0x3a, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x4a, 0x6f, 0x62,
+	0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x27, 0x0a, 0x04, 0x6a, 0x6f, 0x62,
+	0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x13, 0x2e, 0x6a, 0x6f, 0x62, 0x2e, 0x47, 0x65,
+	0x74, 0x4a, 0x6f, 0x62, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x52, 0x04, 0x6a, 0x6f,
+	0x62, 0x73, 0x22, 0x13, 0x0a, 0x11, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4a, 0x6f, 0x62, 0x52,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x13, 0x0a, 0x11, 0x44, 0x65, 0x6c, 0x65, 0x74,
+	0x65, 0x4a, 0x6f, 0x62, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x2b, 0x5a, 0x29,
+	0x76, 0x61, 0x6c, 0x65, 0x74, 0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x68,
+	0x61, 0x6e, 0x64, 0x6c, 0x65, 0x72, 0x2f, 0x6a, 0x6f, 0x62, 0x68, 0x64, 0x6c, 0x2f, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x3b, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x33,
 }
 
 var (
@@ -451,30 +502,32 @@ func file_internal_handler_jobhdl_protos_job_response_proto_rawDescGZIP() []byte
 	return file_internal_handler_jobhdl_protos_job_response_proto_rawDescData
 }
 
-var file_internal_handler_jobhdl_protos_job_response_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_internal_handler_jobhdl_protos_job_response_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
 var file_internal_handler_jobhdl_protos_job_response_proto_goTypes = []interface{}{
 	(*CreateJobResponse)(nil),     // 0: job.CreateJobResponse
 	(*GetJobResponse)(nil),        // 1: job.GetJobResponse
-	(*UpdateJobResponse)(nil),     // 2: job.UpdateJobResponse
-	(*DeleteJobResponse)(nil),     // 3: job.DeleteJobResponse
-	(*structpb.Struct)(nil),       // 4: google.protobuf.Struct
-	(*timestamppb.Timestamp)(nil), // 5: google.protobuf.Timestamp
+	(*GetJobsResponse)(nil),       // 2: job.GetJobsResponse
+	(*UpdateJobResponse)(nil),     // 3: job.UpdateJobResponse
+	(*DeleteJobResponse)(nil),     // 4: job.DeleteJobResponse
+	(*structpb.Struct)(nil),       // 5: google.protobuf.Struct
+	(*timestamppb.Timestamp)(nil), // 6: google.protobuf.Timestamp
 }
 var file_internal_handler_jobhdl_protos_job_response_proto_depIdxs = []int32{
-	4, // 0: job.CreateJobResponse.task_params:type_name -> google.protobuf.Struct
-	5, // 1: job.CreateJobResponse.run_at:type_name -> google.protobuf.Timestamp
-	5, // 2: job.CreateJobResponse.created_at:type_name -> google.protobuf.Timestamp
-	4, // 3: job.GetJobResponse.task_params:type_name -> google.protobuf.Struct
-	5, // 4: job.GetJobResponse.run_at:type_name -> google.protobuf.Timestamp
-	5, // 5: job.GetJobResponse.scheduled_at:type_name -> google.protobuf.Timestamp
-	5, // 6: job.GetJobResponse.created_at:type_name -> google.protobuf.Timestamp
-	5, // 7: job.GetJobResponse.started_at:type_name -> google.protobuf.Timestamp
-	5, // 8: job.GetJobResponse.completed_at:type_name -> google.protobuf.Timestamp
-	9, // [9:9] is the sub-list for method output_type
-	9, // [9:9] is the sub-list for method input_type
-	9, // [9:9] is the sub-list for extension type_name
-	9, // [9:9] is the sub-list for extension extendee
-	0, // [0:9] is the sub-list for field type_name
+	5,  // 0: job.CreateJobResponse.task_params:type_name -> google.protobuf.Struct
+	6,  // 1: job.CreateJobResponse.run_at:type_name -> google.protobuf.Timestamp
+	6,  // 2: job.CreateJobResponse.created_at:type_name -> google.protobuf.Timestamp
+	5,  // 3: job.GetJobResponse.task_params:type_name -> google.protobuf.Struct
+	6,  // 4: job.GetJobResponse.run_at:type_name -> google.protobuf.Timestamp
+	6,  // 5: job.GetJobResponse.scheduled_at:type_name -> google.protobuf.Timestamp
+	6,  // 6: job.GetJobResponse.created_at:type_name -> google.protobuf.Timestamp
+	6,  // 7: job.GetJobResponse.started_at:type_name -> google.protobuf.Timestamp
+	6,  // 8: job.GetJobResponse.completed_at:type_name -> google.protobuf.Timestamp
+	1,  // 9: job.GetJobsResponse.jobs:type_name -> job.GetJobResponse
+	10, // [10:10] is the sub-list for method output_type
+	10, // [10:10] is the sub-list for method input_type
+	10, // [10:10] is the sub-list for extension type_name
+	10, // [10:10] is the sub-list for extension extendee
+	0,  // [0:10] is the sub-list for field type_name
 }
 
 func init() { file_internal_handler_jobhdl_protos_job_response_proto_init() }
@@ -508,7 +561,7 @@ func file_internal_handler_jobhdl_protos_job_response_proto_init() {
 			}
 		}
 		file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*UpdateJobResponse); i {
+			switch v := v.(*GetJobsResponse); i {
 			case 0:
 				return &v.state
 			case 1:
@@ -520,6 +573,18 @@ func file_internal_handler_jobhdl_protos_job_response_proto_init() {
 			}
 		}
 		file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*UpdateJobResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_internal_handler_jobhdl_protos_job_response_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*DeleteJobResponse); i {
 			case 0:
 				return &v.state
@@ -538,7 +603,7 @@ func file_internal_handler_jobhdl_protos_job_response_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_internal_handler_jobhdl_protos_job_response_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   4,
+			NumMessages:   5,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
